Homework 2/5_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: homework2-deployment
    namespace: testing3
spec:
    replicas: 2
    selector:
       matchLabels:
          app: homework2-py-app
    template:
       metadata:
          labels:
             app: homework2-py-app
       spec:
          containers:
          - name: homework2-py
            image: xapepama/homework2-py:v1
            ports:
              - name: web
                containerPort: 80
