Homework 2/3_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework2-service
  namespace: testing3
spec:
  selector:
    app: homework2-py-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
