Homework 2/4_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homework2-ingress
  namespace: testing3
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /list
          backend:
            serviceName: homework2-service
            servicePort: 9000
        - path: /create
          backend:
            serviceName: homework2-service
            servicePort: 9000
        - path: /delete
          backend:
            serviceName: homework2-service
            servicePort: 9000
